--- a/easyandroidform/build.gradle
+++ b/easyandroidform/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'de.mannodermaus.android-junit5'
 apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 29
@@ -28,6 +29,10 @@ android {
         targetCompatibility = '1.8'
     }
 
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
 }
 
 dependencies {
@@ -50,6 +55,27 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.2"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:5.3.1"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.2"
+
+    testImplementation "com.android.support.test:runner:1.0.2"
+    testImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
+    testImplementation "com.android.support.test.espresso:espresso-intents:3.0.2"
+    androidTestRuntimeOnly "de.mannodermaus.junit5:android-instrumentation-test-runner:0.2.2"
+
+    // Add the Android Instrumentation Test dependencies to the product flavor only
+    // (with this, only the "experimental" flavor must have minSdkVersion 26)
+    androidTestImplementation "org.junit.jupiter:junit-jupiter-api:5.3.2"
+    androidTestImplementation "de.mannodermaus.junit5:android-instrumentation-test:0.2.2"
+
+    // Runtime dependencies for Android Instrumentation Tests
+    androidTestRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.2"
+    androidTestRuntimeOnly "org.junit.platform:junit-platform-runner:1.3.2"
+
+    testImplementation 'org.mockito:mockito-core:2.25.0'
+//    testImplementation "org.powermock:powermock-api-mockito:1.6.2"
+
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
 }
