--- a/easyandroidform/build.gradle
+++ b/easyandroidform/build.gradle
@@ -37,7 +37,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(path: ':form-test-module')
+    testImplementation project(path: ':form-test-module')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
