--- a/easyandroidform/build.gradle
+++ b/easyandroidform/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
     }
@@ -54,19 +54,20 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
 
-    testImplementation "com.android.support.test:runner:1.0.2"
-    testImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
-    testImplementation "com.android.support.test.espresso:espresso-intents:3.0.2"
+//    implementation "org.junit.jupiter:junit-jupiter-params:5.3.1"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
+
+
+    testImplementation 'androidx.test.ext:junit:1.1.1'
+    testImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    testImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
     androidTestRuntimeOnly "de.mannodermaus.junit5:android-instrumentation-test-runner:0.2.2"
 
-
-    implementation "org.junit.jupiter:junit-jupiter-api:5.3.2"
-    implementation "org.junit.jupiter:junit-jupiter-params:5.3.1"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.2"
 
     // Add the Android Instrumentation Test dependencies to the product flavor only
     // (with this, only the "experimental" flavor must have minSdkVersion 26)
@@ -78,7 +79,6 @@ dependencies {
     androidTestRuntimeOnly "org.junit.platform:junit-platform-runner:1.3.2"
 
     implementation 'org.mockito:mockito-core:2.25.0'
-
     implementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
 
     testImplementation 'joda-time:joda-time:2.9.3'
