--- a/easyandroidform/build.gradle
+++ b/easyandroidform/build.gradle
@@ -37,6 +37,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'com.github.saizad:EasyAndroidFormTest:develop-SNAPSHOT'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
