--- a/easyandroidform/build.gradle
+++ b/easyandroidform/build.gradle
@@ -80,6 +80,7 @@ dependencies {
 
     implementation 'org.mockito:mockito-core:2.25.0'
     implementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+//    testImplementation 'org.mockito:mockito-inline:2.8.47'
 
     testImplementation 'joda-time:joda-time:2.9.3'
 
